openshift/kafdrop4.yaml

kind: DeploymentConfig
apiVersion: v1
metadata:
  name: kafdrop
  namespace: my-kafka
  labels:
    app: kafdrop
  annotations:
    app.openshift.io/connects-to: kafdrop
    app.openshift.io/vcs-uri: 'https://github.com/obsidiandynamics/kafdrop'
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    name: kafdrop
  template:
    metadata:
      name: kafdrop
      labels:
        name: kafdrop
    spec:
      containers:
        - name: kafdrop
          imagePullPolicy: IfNotPresent
          image: obsidiandynamics/kafdrop
          ports:
            - containerPort: 9000
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /actuator/health
              port: 9000
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /actuator/health
              port: 9000
              scheme: HTTP
  triggers:
    - type: ConfigChange
---
kind: Service
apiVersion: v1
metadata:
  name: kafdrop
  labels:
    app: kafdrop
spec:
  ports:
    - name: 9000-tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    deploymentconfig: kafdrop
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: kafdrop
  name: kafdrop
spec:
  port:
    targetPort: 9000-tcp
  to:
    kind: Service
    name: kafdrop
    weight: 100
